@@ -2,6 +2,8 @@ Cascading Change Log
 
 unreleased (wip 1.1)
 
+  Fixed bug where c.t.Tuples would fail when coercing non-standard java types or primitives.
+
   Fixed bug where c.t.Tap instances that returned true for #isWriteDirect() were not properly being initialized
   when used as a sink.
 
